--- a/apps/com_pinoox_manager/theme/spark/src/assets/styles/pages/_page-control.scss
+++ b/apps/com_pinoox_manager/theme/spark/src/assets/styles/pages/_page-control.scss
@@ -16,6 +16,7 @@
     right: 0;
     z-index: 10;
     transition: width 0.3s ease-in-out;
+    overflow: visible;
   }
 
   &__page {
@@ -45,6 +46,8 @@
       top: 0;
       bottom: 0;
       right: 0;
+      overflow: visible;
+      z-index: 30;
     }
 
     .pageControl__page {
